update: new recipes

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/corncake.html">Corn Cake</a>
+    <ul>
+        <li><a href="recipes/creamygratinpotatoes.html">Click here to see one great easter recipe!</a></li>
+        <li><a href="recipes/cinammonroll.html">Here is one of the best cinammon rolls you'll see!</a></li>
+        <li><a href="recipes/cordonbleu.html">Get ready to eat like royalty with this one!</a></li>
+    </ul>
 </body>
 </html>
